gl33-master/src/test/deca/context/valid/others/var.deca

{
   int a;
   String b = "hello";

   println(a,b);
}
