gl33-master/src/test/deca/context/invalid/other/while_fausse_int.deca
// Invalid test
// Boucle while fausse (int comme entree)

{
    int n = 2;
    
    while(n){
        println("non");
    }

}
